<resources>
    <string name="app_name" translatable="false">THink Pen</string>
    <string name="button" translatable="false">Button</string>
    <string name="real_time">Real Time</string>
    <string name="start" translatable="false">Start</string>
    <string name="z" translatable="false">z</string>
    <string name="y" translatable="false">y</string>
    <string name="x" translatable="false">x</string>
    <string name="forza" translatable="false">Forza</string>
    <string name="giroscopio" translatable="false">Giroscopio</string>
    <string name="accelerazione" translatable="false">Accelerazione</string>
    <string name="acceleration_data">Acceleration Data</string>
    <string name="gyroscope_data">Gyroscope Data</string>
    <string name="x_data" translatable="false">X data</string>
    <string name="y_data" translatable="false">Y data</string>
    <string name="force_data">Force Data</string>
    <string name="buttonbattery" translatable="false">ButtonBattery</string>
    <string name="buttondata" translatable="false">ButtonData</string>
    <string name="log_in" translatable="false">Log In</string>
    <string name="username" translatable="false">Username</string>
    <string name="password" translatable="false">Password</string>
    <string name="submit">Submit</string>
    <string name="sign_in">Sign In</string>
    <string name="pen_connection">Pen Connection</string>
    <string name="log_out">Log Out</string>
    <string name="patients_list">Patients\' list</string>
    <string name="new_patient">New patient</string>
    <string name="fill_up_all_the_requested_information">Fill up all the requested information</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="gender">Gender</string>
    <string name="birth_date">Birth Date</string>
    <string name="tax_code">Tax code</string>
    <string name="dom_hand">Dom Hand</string>
    <string name="add_notes">Add notes</string>
    <string name="add_patient">Add Patient</string>
    <string name="back_to_patient_list">Back to patient list</string>
    <string name="yes">Yes</string>
    <string name="no" translatable="false">No</string>
    <string name="exercise_1">Exercise 1</string>
    <string name="press_start_to_perform_data_acquisition">Press start to perform data acquisition</string>
    <string name="press_stop_to_end_the_acquisition_of_the_data">Press stop to end the acquisition of the data</string>
    <string name="stop" translatable="false">Stop</string>
    <string name="you_will_be_able_to_download_files_once_all_three_exercises_will_be_completed">You will be able to download files once all three exercises will be completed</string>
    <string name="download_files">Download files</string>
    <string name="start_scan">Start Scan</string>
    <string name="name_surname">Name + Surname</string>
    <string name="phase">Phase</string>
    <string name="patient_personal_page">Patient personal page</string>
    <string name="add_a_new_patient">Add a new patient</string>
    <string name="download" translatable="false">Download</string>
    <string name="reset">Reset</string>
    <string name="pen_310" translatable="false">Pen 310</string>
    <string name="protocol_phase_1">Protocol: Phase 1</string>
    <string name="select_the_test">Select the test:</string>
    <string name="exercise_2">Exercise 2</string>
    <string name="exercise_3">Exercise 3</string>
    <string name="protocol_phase_2">Protocol: Phase 2</string>
    <string name="description">description</string>
    <string name="battery">Battery:</string>
    <string name="new_clinician">New clinician</string>
    <string name="e_mail">E-mail</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="edit_patient">Edit patient</string>
    <string name="edit_patient1">Edit Patient</string>
    <string name="z_data1" translatable="false">z_data</string>
    <string name="eng" translatable="false">ENG</string>
    <string name="it" translatable="false">IT</string>
    <string name="change_language">Change language</string>
    <string name="notes">Notes</string>
    <string name="select_the_phase">Select the phase</string>
    <string name="phase_1">Phase 1</string>
    <string name="phase_2">Phase 2</string>
    <string name="patient_records">Patient records</string>
    <string name="language">English</string>
    <string name="all_patients">All patients</string>
    <string name="phase_1_description_1">In the same day the patient has to repeat the three exercises twice.</string>
    <string name="phase_1_description_2">The exercises must be performed with a break of at least one minute from one to another.</string>
    <string name="phase_1_description_3">Between the two sessions there must be a pause of at least 30 minutes.</string>
    <string name="phase_description_dwn"> You will be able to download files once all three exercises will be completed</string>
    <string name="phase_2_description"> In this phase the patient has to do the 3 exercises once a month.</string>
    <string name="connention_message">Have you connected the pen?</string>
    <string name="delete_message">"Do you want to delete: </string>
    <string name="choose_language"> Choose your language</string>

    <string name="back_to_patient_page">Back to patient page</string>
    <string name="back_to_phase"> Back to phase </string>
    <string name="ex1">Make the patient write a grocery list with at least 6 elements</string>
    <string name="ex2">Make the patient write a free text (maximum 7 rows)</string>
    <string name="ex3">Read to the patient 15 words from Batteria E.N.P.A. including 7 regular words, 3 irregular words and 5 not-words. Read them in a random order</string>
    <string name="back_to_log_in">Back to log in</string>
       <string name="start_protocol">Start Protocol</string>
    <string name="left">left</string>
    <string name="right">right</string>



    <string-array name="gender">
        <item>male</item>
        <item>female</item>
    </string-array>

    <string-array name="dominanthand">
        <item>right</item>
        <item>left</item>
    </string-array>

</resources>