<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sfondogine">


    <ImageView
        android:id="@+id/icExercise3"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:src="@mipmap/ic_exercise"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvExercise3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Exercise 3"
        android:textColor="@color/strings"
        android:textSize="40dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvExDescription3"
        android:layout_width="353dp"
        android:layout_height="114dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="28dp"
        android:text="@string/ex3"
        android:textColor="@color/strings"
        android:textSize="23dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvExercise3" />


    <TextView
        android:id="@+id/tvStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/press_start_to_perform_data_acquisition"
        android:textColor="@color/strings"
        android:textSize="19sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnStart3" />

    <Button
        android:id="@+id/btnStart3"
        android:layout_width="100dp"
        android:layout_height="55dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="#1A731E"
        android:text="@string/start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvStop" />

    <TextView
        android:id="@+id/tvStop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/press_stop_to_end_the_acquisition_of_the_data"
        android:textColor="@color/strings"
        android:textSize="19sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.578"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDownload" />

    <Button
        android:id="@+id/btnStop3"
        android:layout_width="100dp"
        android:layout_height="55dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="#8E2424"
        android:text="@string/stop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvStart" />

    <TextView
        android:id="@+id/tvDownload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="176dp"
        android:text="@string/you_will_be_able_to_download_files_once_all_three_exercises_will_be_completed"
        android:textColor="@color/strings"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/tvExercise3"
        tools:layout_editor_absoluteX="30dp" />

    <Button
        android:id="@+id/btnDownloadEx3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/strings"
        android:text="@string/download_files"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnStop3" />

</androidx.constraintlayout.widget.ConstraintLayout>