<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/sfondogine">

    <ImageView
        android:id="@+id/icExercise2"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="16dp"
        android:src="@mipmap/ic_exercise"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvExercise2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="Exercise 2"
            android:textColor="@color/strings"
            android:textSize="40dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tvExDescription2"
        android:layout_width="332dp"
        android:layout_height="64dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:text="@string/ex2"
        android:textColor="@color/strings"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvExercise2" />

    <TextView
        android:id="@+id/tvStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/press_start_to_perform_data_acquisition"
        android:textSize="19sp"
        android:textColor="@color/strings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnStart2" />

    <Button
        android:id="@+id/btnStart2"
        android:layout_width="100dp"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#1A731E"
        android:text="@string/start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvStop" />

    <TextView
        android:id="@+id/tvStop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="228dp"
        android:text="@string/press_stop_to_end_the_acquisition_of_the_data"
        android:textColor="@color/strings"
        android:textSize="19sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvExercise2" />

    <Button
        android:id="@+id/btnStop2"
        android:layout_width="100dp"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#8E2424"
        android:text="@string/stop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvStart" />


    <Button
        android:id="@+id/btnDownloadEx2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/download_files"
        android:backgroundTint="@color/strings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnStop2" />


</androidx.constraintlayout.widget.ConstraintLayout>