<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_margin="15dp"
    android:background="@color/sfondogine"
    tools:context=".DeleteMessageActivity">


    <LinearLayout
        android:orientation="vertical"
        android:padding="15dp"
        android:background="@drawable/shape_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvQuestion"
            android:textStyle="bold"
            android:textSize="19sp"
            android:textColor="@color/strings"
            android:text="@string/delete_message"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tvPatient"
            android:padding="10dp"
            android:textStyle="bold"
            android:textSize="19sp"
            android:textColor="@color/strings"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btnYes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/strings"
            android:text="@string/yes" />

        <Button
            android:id="@+id/btnNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/strings"
            android:text="@string/no" />

    </LinearLayout>
</LinearLayout>
