<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sfondogine"
    tools:context=".PatientListActivity">


    <TextView
        android:id="@+id/tvPatientList"
        android:layout_width="354dp"
        android:layout_height="49dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:ems="10"
        android:minHeight="48dp"
        android:text="@string/patients_list"
        android:textColor="@color/strings"
        android:textSize="35dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/rvPatients"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.877"
        app:layout_constraintStart_toStartOf="parent" />


    <Button
        android:id="@+id/btnLogOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/strings"
        android:text="@string/log_out"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.948"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.937" />

    <Button
        android:id="@+id/btnNewPatient"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/strings"
        android:text="@string/add_a_new_patient"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.134"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.802" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvPatients"
        android:layout_width="359dp"
        android:layout_height="358dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.227"
        tools:listitem="@layout/activity_patient" />

    <Button
        android:id="@+id/btnAllPatientsToSelect"
        android:layout_width="120dp"
        android:layout_height="57dp"
        android:layout_marginEnd="52dp"
        android:backgroundTint="@color/strings"
        android:text="@string/all_patients"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.804" />


</androidx.constraintlayout.widget.ConstraintLayout>