<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/color22"
    tools:context=".ConnectionMessageActivity">

    <LinearLayout
        android:orientation="vertical"
        android:padding="15dp"
        android:layout_margin="10dp"
        android:background="@drawable/shape_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/LinearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            tools:layout_editor_absoluteX="45dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginHorizontal="10dp"
            android:src="@drawable/bell" />

        <TextView
            android:id="@+id/tvMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/connention_message"
            android:textColor="@color/color1"
            android:textSize="19sp"
            android:textStyle="bold" />
        </LinearLayout>

        <Button
            android:backgroundTint="@color/color1"
            android:id="@+id/btnYes1"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes" />

        <Button
            android:backgroundTint="@color/color1"
            android:id="@+id/btnNo1"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no" />

    </LinearLayout>
</LinearLayout>
