<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LanguageActivity"
    android:background="@color/color2">


    <ImageView
        android:id="@+id/icLanguage"
        android:layout_width="190dp"
        android:layout_height="190dp"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="48dp"
        android:src="@drawable/translating"
        app:layout_constraintBottom_toTopOf="@+id/spinnerLanguage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.408" />

    <Spinner
        android:id="@+id/spinnerLanguage"
        android:layout_width="320dp"
        android:layout_height="180dp"
        android:background="@drawable/shape_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.54" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.54" />

    <TextView
        android:id="@+id/tvApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="208dp"
        android:text="@string/choose_language"
        android:textColor="@color/color3"
        android:textSize="50dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.811"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvLanguage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="15dp"
        android:text="@string/language"
        android:textColor="@color/color1"
        android:textSize="50dp"
        app:layout_constraintBottom_toBottomOf="@+id/spinnerLanguage"
        app:layout_constraintEnd_toEndOf="@+id/spinnerLanguage"
        app:layout_constraintStart_toStartOf="@+id/spinnerLanguage"
        app:layout_constraintTop_toTopOf="@+id/spinnerLanguage" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="140dp"
        android:layout_height="90dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="52dp"
        android:textSize="20dp"
        android:backgroundTint="@color/color1"
        android:text="@string/back_to_log_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>